# gvars

./: .gitignore  Authors  GVars2.h  GVars2.h.historic  Makefile  Makefile.in  README.md  configure  configure.ac  main.cc
gvars2_compat/: GStringUtil.h  GUI.h  GUI_Motif.h  GVars2.h
gvars3/: GStringUtil.h  GUI.h  GUI_Fltk.h  GUI_Fltk2.h  GUI_Motif.h  GUI_Widgets.h  GUI_non_readline.h  GUI_readline.h  config.h  default.h  gv3_implementation.hh  gvars3.h  instances.h  serialize.h  type_name.h
src/: GStringUtil.cc  GUI.cc  GUI_Fltk.cc  GUI_Fltk2.cc  GUI_Motif.cc  GUI_impl.h  GUI_impl_headless.cc  GUI_impl_noreadline.cc  GUI_impl_readline.cc  GUI_language.cc  GUI_no_language.cc  GUI_non_readline.cc  GUI_none.cc  GUI_readline.cc  gvars2.cc  gvars3.cc  inst.cc  inst_headless.cc  main.cc  serialize.cc  serialize_toon.cc
